Add CRUD for route groups.
Adding all controller, model and views. Views are too basic and not
done. Need to optimise when the whole list of routes gets returned.
Still not able to add a route to a group.

--- a/app/assets/stylesheets/finder.css.scss
+++ b/app/assets/stylesheets/finder.css.scss
@@ -11,3 +11,15 @@
 
 .search-box {
 }
+
+.route {
+  padding: 5px;
+  margin: 5px;
+  border: solid 1px;  
+}
+
+.route-data {
+  display: block;
+}
+
+
