--- a/app/views/finder/find.html.erb
+++ b/app/views/finder/find.html.erb
@@ -1,31 +1,31 @@
 <div class="left-search-container">
 <form class="search-box" accept-charset="UTF-8" action="finder/find" method="post">
   <label for="days">Number of days: </label> <input type="number" name="days" id="days" min="1" max="20" />
-  <label for="hours">Hours per day: </label> <input type="number" name="hours" id="hours" min="1" max="24"/>
+  <label for="hours">Hours per day: </label> <input type="number" name="hours" id="hours" min="1" max="18"/>
   <label for="cyclic">Cyclic route: </label> <input type="checkbox" name="cyclic" id="cyclic" /> 
   <label for="location">Destination: </label> <input type="text" name="location" id="location" /> 
-  <input type="submit" id="submit" value="/" />
+  <input type="submit" id="submit" value="Find" />
 </form>
 </div>
 
 <div class="routes-results"> 
 
   <% @routes.each do |route| %>
-  <% logger.debug(@routes) %>
-  <% logger.debug(route)%>
   <div class="route">
     <%= route.points.collect{|point| point.name}.join(" > ") %>
     <div class="route-data">
       <% altitudes = route.points.collect{|point| point.altitude}%>
-      <span>Altitude: <%= [altitudes.min, altitudes.max].join(' - ') %></span>
-      <span>Days: <%= route.length %></span>
-      <span>Avg. hours/day: <%= route.avg_hours %> </span>
+      <div>Altitude: <%= [altitudes.min, altitudes.max].join(' - ') %></div>
+      <div>Days: <%= route.length %></div>
+      <div>Avg. hours/day: <%= route.avg_hours %> </div>
     </div>
     <div class="route-description">
-      <span class="route-description-header">Description: </span>
-      <span><%= route.comments %></span>      
+      <div class="route-description-header">Description: </div>
+      <div><%= route.comments %></div>  
+    </div>
+    <div class="route-menu">
     </div>
   </div>
-<% end %>
+  <% end %>
 
 </div>
