Add required login by default & exceptions where necessary

--- a/app/views/finder/find.html.erb
+++ b/app/views/finder/find.html.erb
@@ -1,5 +1,5 @@
 <div class="left-search-container">
-<form class="search-box" accept-charset="UTF-8" action="finder/find" method="post">
+<form class="search-box" accept-charset="UTF-8" action="find" method="post">
   <label for="days">Number of days: </label> <input type="number" name="days" id="days" min="1" max="20" />
   <label for="hours">Hours per day: </label> <input type="number" name="hours" id="hours" min="1" max="18"/>
   <label for="cyclic">Cyclic route: </label> <input type="checkbox" name="cyclic" id="cyclic" /> 
