List grouped routes
Modify the routes per group view to list route data. Reuse the view from
finder.

--- a/app/views/groups/show_routes.js.erb
+++ b/app/views/groups/show_routes.js.erb
@@ -1,1 +1,1 @@
-$("#routes-per-group").html("<%=escape_javascript(render :partial=>"show_routes")%>");
+$("#routes-per-group").html("<%=escape_javascript(render :partial => "finder/routes")%>");
