Add pseudo recommendation
Recommend routes similar to routes in group. This is
pseudo-recommendation where the recommended routes are just the result
of a finder search with parameters averaged from the gourp's routes.

--- a/app/views/finder/find.html.erb
+++ b/app/views/finder/find.html.erb
@@ -8,29 +8,6 @@
 </form>
 </div>
 
-<% render :partial => 'routes' %>
-
-<div class="routes-results">
-
-  <% @routes.each do |route| %>
-  <div class="route">
-    <%= route.points.collect{|point| point.name}.join(" > ") %>
-    <div class="route-data">
-      <% altitudes = route.points.collect{|point| point.altitude}%>
-      <div>Altitude: <%= [altitudes.min, altitudes.max].join(' - ') %></div>
-      <div>Days: <%= route.length %></div>
-      <div>Avg. hours/day: <%= route.avg_hours %> </div>
-    </div>
-    <div class="route-description">
-      <div class="route-description-header">Description: </div>
-      <div><%= route.comments %></div>
-    </div>
-    <div class="groups">
-      <div class="json-route" style="display: none"><%= route.to_json %></div>
-      <div class="groups-button">Add to group</div>
-      <div class="groups-menu"></div>
-    </div>
-  </div>
-  <% end %>
+<%= render :partial => 'routes' %>
 
 </div>
