--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,11 +1,11 @@
 <div class="groups-list-menu">
   <ul>
-    <li><%= link_to 'Add new', new_group_path, :remote=>true  %>	
+    <li><%= link_to 'Add new', new_group_path, :remote=>true  %>
     <% @groups.each do |group| %>
-    <li><%= link_to group.name, 'groups/' + group.id.to_s + '/routes', :remote=>true %>
-    <%end%>	
-  </ul>	  
+    <li><%= link_to group.name, 'groups/' + group.id.to_s + '/routes', :remote=>true %> <%= link_to "Simillar", 'groups/' + group.id.to_s + '/similar', :remote=>true %>
+    <%end%>
+  </ul>
 </div>
 <div id="routes-per-group" class="routes-per-group">
-  	
+
 </div>
