--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,42 +14,47 @@
  *= require_self
  */
 
-body {
-  margin: 0px;
-}
+/** Import bottstrap-saas assets */
+@import "bootstrap-sprockets"
+@import "bootstrap"
 
-.header-menu ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 5px;  
-  text-align: center;
-  background-color: #4BAB4F;
-}
+body
+  margin: 0px
 
-.header-menu li {
-  display: inline;
-  padding: 5px 10px 5px 10px;
-}
 
-.header-menu li:hover {
-  background-color: #358938;
-}
+.header-menu
+  ul
+    list-style-type: none
+    margin: 0
+    padding: 5px
+    text-align: center
+    background-color: #4BAB4F
 
-.header-menu li a {
-  text-decoration: none;
-  color: #fff;
-}
+.header-menu
+  li
+    display: inline
+    padding: 5px 10px 5px 10px
 
-.header-menu li a:hover {
-  background-color: #358938; 	
-}
+.header-menu
+  li:hover
+    background-color: #358938
 
-.header-menu .login {
-  float: right;
-  color: #fff;  
-  text-decoration: underline;
-}
+.header-menu
+  li
+    a
+      text-decoration: none
+      color: #fff
 
-.header-image {
-  width: 100%;
-}
+.header-menu
+  li
+    a:hover
+      background-color: #358938
+
+.header-menu
+  .login
+    float: right
+    color: #fff
+    text-decoration: underline
+
+.header-image
+  width: 100%
