--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,27 +7,49 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	
+
 
 <!-- Here goes the header image -->
-<img class="header-image" src="/assets/index.jpeg"><!--
+<img class="header-image" src="/assets/index.jpeg">
 
---><!-- Here goes the header menu --><!--
---><div class="header-menu">
-  <ul>
-    <li><a href="/">Search</a>
-    <li><a>Chat with Ginnie</a>
-    <li><a href="<%= groups_path %>">Explore</a>
-    <li><a>About</a>
-      <% if current_user %>
-        <%= link_to "Edit Profile", edit_user_path(current_user.id) %>
-        <%= link_to "Logout", :logout, method: :post %>
-      <% else %>
-        <li class="login"><a href="<%= login_path %>">Log in</a>
-      <% end %>
-  </ul>
-</div>
+<!-- Here goes the header menu -->
+<nav class="navbar navbar-default navbar-static-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Tripfinder</a>
+    </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Search</a></li>
+        <li><a href="#">Chat with Ginnie</a></li>
+        <li><a href="<%= groups_path %>">Explore</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if current_user %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Details", edit_user_path(current_user.id) %></li>
+              <li><%= link_to "Logout", :logout, method: :post %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li class="login"><a href="<%= login_path %>">Log in</a>
+        <% end %>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
 <!-- Here goes the page body  -->
 <%= yield %>
