--- a/app/views/finder/_groups_menu.html.erb
+++ b/app/views/finder/_groups_menu.html.erb
@@ -1,14 +1,8 @@
-<div class="route-button-menu" >
-  <div class="groups-list" style="max-height: 215px;">
-    <% for group in @groups %>
-      <li style="display: block;">
-      <input id="group-<%= group.id %>" <%= "checked" if @route_groups.include? group.id  %> class="select-group" type="checkbox"/>
-	      <%= group.name %>
-      </li>
-    <%end%>
-   </ul>
-  </div>
-  <form accept-charset="UTF-8" action="" method="post">
-    <input type="text" />
-  </form>
-</div>
+<% for group in @groups %>
+  <li class="group-menu-item" id="<%= group.id %>">
+    <a href="#" class="small" data-value="<%= group.id %>" tabIndex="-1">
+      <input id="check-<%= group.id %>" <%= "checked" if @route_groups.include? group.id %> type="checkbox"/>
+      <%= group.name %>
+    </a>
+  </li>
+<%end%>
