--- a/app/views/finder/_routes.html.erb
+++ b/app/views/finder/_routes.html.erb
@@ -1,18 +1,19 @@
 <div class="routes-results">
-
+  <% i = 0 %>
   <% @routes.each do |route| %>
+    <% i = i + 1 %>
     <div class="panel panel-default">
       <div class="panel-heading clearfix">
-        <!-- Route summery as heading  -->
+        <!-- Route summary as heading  -->
         <%= route.points.collect{|point| point.name}.join(" > ") %>
         <!-- Save to group button -->
         <div class="dropdown pull-right groups-menu">
           <div class="json-route" style="display: none"><%= route.to_json %></div>
-          <button class="btn btn-link dropdown-toggle groups-button" type="button" id="save-route-menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          <button class="btn btn-link dropdown-toggle groups-button" type="button" id=<%= "save-route-menu" + i.to_s %> data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             Save
             <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
           </button>
-          <ul class="dropdown-menu" aria-labelledby="save-route-menu"></ul>
+          <ul class="dropdown-menu" aria-labelledby=<%= "save-route-menu" + i.to_s %>></ul>
         </div>
       </div>
       <div class="panel-body">
@@ -20,10 +21,10 @@
         <div>Altitude: <%= [altitudes.min, altitudes.max].join(' - ') %></div>
         <div>Days: <%= route.length %></div>
         <div>Avg. hours/day: <%= route.avg_hours %> </div>
-        <div role="button" data-toggle="collapse" href="#description-well" aria-expanded="false" aria-controls="description-well">
+        <div role="button" data-toggle="collapse" href=<%= "#description-well" + i.to_s %> aria-expanded="false" aria-controls=<%= "description-well" + i.to_s %> >
           Description <span class="glyphicon glyphicon-collapse-down" aria-hidden="true"></span>
         </div>
-        <div class="collapse" id="description-well">
+        <div class="collapse" id=<%= "description-well" + i.to_s %> >
           <div class="well">
             <div><%= route.comments %></div>
           </div>
