Add group's actions in a dropdown
* Add group's Similar, Edit, Delete actions in a drop-down
* Fixed Similar action to work when averages are non-integer
* TODO fix responces for Update/Delete actions. Page does not get
* updated currently and for Update, it even gets broken

--- a/app/views/groups/_group_details.html.erb
+++ b/app/views/groups/_group_details.html.erb
@@ -1,17 +1,19 @@
+<%= @new ? "New group" : "Edit group"%>
+
 <%= form_for @group do |f| %>
-	 
+
 <p>
   <%= f.label :name %><br>
   <%= f.text_field :name %>
 </p>
-					   
+
 <p>
   <%= f.label :description %><br>
   <%= f.text_area :description %>
 </p>
-												       
+
 <p>
   <%= f.submit %>
 </p>
-															       
+
 <% end %>
