--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,42 @@
-<h1>New user</h1>
+<div class="container row">
+  <div class="col-md-6 col-md-offset-5 centered">
+    <div class="page-header">
+      <h1>Register</h1>
+    </div>
 
-<%= render 'form' %>
+    <%= form_for(@user) do |f| %>
+      <% if @user.errors.any? %>
+        <div class="panel panel-danger">
+          <div class="panel-heading">
+            Couldn't register user
+          </div>
+          <div class="panel-body">
+            <ul>
+              <% @user.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      <% end %>
+
+      <div class="form-group">
+        <label for="user_email">Email address</label>
+        <input name="user[email]" type="email" class="form-control" id="user_email" placeholder="Email">
+      </div>
+      <div class="form-group">
+        <label for="user_password">Password</label>
+        <input name="user[password]" type="password" class="form-control" id="user_password" placeholder="Password">
+      </div>
+      <div class="form-group">
+        <label for="user_password_confirmation">Password</label>
+        <input name="user[password_confirmation]" type="password" class="form-control" id="user_password_confirmation" placeholder="Confirm password">
+      </div>
+      <button type="submit" class="btn btn-default">Register</button>
+
+      <%= link_to 'Login', login_path, class: "btn btn-default" %>
+    <% end %>
+
+  </div>
+</div>
 
