--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Details", edit_user_path(current_user.id) %></li>
+              <li><%= link_to "Details", user_path(current_user.id) %></li>
               <li><%= link_to "Logout", :logout, method: :post %></li>
             </ul>
           </li>
