--- a/app/views/users/details.html.erb
+++ b/app/views/users/details.html.erb
@@ -1,7 +1,11 @@
 <div class="container row">
   <div class="col-md-6 col-md-offset-5 centered">
     <div class="page-header">
-      <h1>Register</h1>
+      <% if current_user %>
+        <h1>User details</h1>
+      <% else %>
+        <h1>Register</h1>
+      <% end %>
     </div>
 
     <%= form_for(@user) do |f| %>
@@ -22,19 +26,23 @@
 
       <div class="form-group">
         <label for="user_email">Email address</label>
-        <input name="user[email]" type="email" class="form-control" id="user_email" placeholder="Email">
+        <input value="<%= @user.email %>" name="user[email]" type="email" class="form-control" id="user_email" placeholder="Email">
       </div>
       <div class="form-group">
         <label for="user_password">Password</label>
-        <input name="user[password]" type="password" class="form-control" id="user_password" placeholder="Password">
+        <input value="<%= @user.password %>" name="user[password]" type="password" class="form-control" id="user_password" placeholder="Password">
       </div>
       <div class="form-group">
         <label for="user_password_confirmation">Password</label>
         <input name="user[password_confirmation]" type="password" class="form-control" id="user_password_confirmation" placeholder="Confirm password">
       </div>
-      <button type="submit" class="btn btn-default">Register</button>
+      <button type="submit" class="btn btn-default">
+        <%= current_user ? "Update" : "Register" %>
+      </button>
 
-      <%= link_to 'Login', login_path, class: "btn btn-default" %>
+      <% if not current_user %>
+        <%= link_to 'Login', login_path, class: "btn btn-default" %>
+      <% end %>
     <% end %>
 
   </div>
