--- a/app/views/finder/find.html.erb
+++ b/app/views/finder/find.html.erb
@@ -1,12 +1,24 @@
-<div class="left-search-container">
-<form class="search-box" accept-charset="UTF-8" action="find" method="post">
-<label for="days">Number of days: </label> <input type="number" name="days" value="<%= @parameters[:days] %>" id="days" min="1" max="20" />
-  <label for="hours">Hours per day: </label> <input type="number" name="hours" value="<%= @parameters[:hours] %>" id="hours" min="1" max="18"/>
-  <label for="cyclic">Cyclic route: </label> <input type="checkbox" name="cyclic" <%= "checked" if  @parameters[:cyclic] %> id="cyclic" />
-  <label for="location">Destination: </label> <input type="text" name="location" value="<%= @parameters[:location] %>" d="location" />
-  <input type="submit" id="submit" value="Find" />
+<form class="form-inline full-width" accept-charset="UTF-8" action="find" method="post">
+  <div class="form-group">
+    <label for="days_num">Number of days:</label>
+    <input name="days" value="<%= @parameters[:days] %>" type="number" class="form-control" id="days_num" min="1" max="20" placeholder="How long is your vacation?">
+  </div>
+  <div class="form-group">
+    <label for="avg_hours">Hours per day:</label>
+    <input name="hours" value="<%= @parameters[:hours] %>" type="number" class="form-control" id="avg_hours" min="1" max="20" placeholder="Be brave!">
+  </div>
+  <div class="form-group">
+    <label for="cyclic" >Cyclic route:</label>
+    <input name="cyclic" <%= "checked" if @parameters[:cyclic] %> id="cyclic" class="form-control" type="checkbox">
+  </div>
+  <div class="form-group">
+    <label for="destination">Destination:</label>
+    <input name="location" value="<%= @parameters[:location]  %>" type="text" class="form-control" id="destination" placeholder="Do you have one?">
+  </div>
+  <div class="form-group">
+  <button type="submit" class="btn btn-default">Find</button>
+  </div>
 </form>
-</div>
 
 <%= render :partial => 'routes' %>
 
