--- a/app/views/finder/_routes.html.erb
+++ b/app/views/finder/_routes.html.erb
@@ -19,11 +19,25 @@
         <% end %>
       </div>
       <div class="panel-body">
-        <% altitudes = route.points.collect{|point| point.altitude}%>
-        <div>Altitude: <%= [altitudes.min, altitudes.max].join(' - ') %></div>
-        <div>Days: <%= route.length %></div>
-        <div>Avg. hours/day: <%= route.avg_hours %> </div>
-        <div role="button" data-toggle="collapse" href=<%= "#description-well" + i.to_s %> aria-expanded="false" aria-controls=<%= "description-well" + i.to_s %> >
+        <form class="form-horizontal route-data">
+          <div class="form-group">
+            <% altitudes = route.points.collect{|point| point.altitude}%>
+            <label class="col-sm-2 control-label">Altitude:</label>
+            <div class="col-sm-10">
+              <p class="form-control-static"> <%= [altitudes.min, altitudes.max].join(' - ') %></p>
+            </div>
+            <label class="col-sm-2 control-label">Days:</label>
+            <div class="col-sm-10">
+              <p class="form-control-static"> <%= route.length %></p>
+            </div>
+            <label class="col-sm-2 control-label">Hours per day:</label>
+            <div class="col-sm-10">
+              <p class="form-control-static"> <%= route.avg_hours %></p>
+            </div>
+          </div>
+        </form>
+
+        <div class="btn btn-link" role="button" data-toggle="collapse" href=<%= "#description-well" + i.to_s %> aria-expanded="false" aria-controls=<%= "description-well" + i.to_s %> >
           Description <span class="glyphicon glyphicon-collapse-down" aria-hidden="true"></span>
         </div>
         <div class="collapse" id=<%= "description-well" + i.to_s %> >
