--- a/app/views/groups/_group_details.html.erb
+++ b/app/views/groups/_group_details.html.erb
@@ -1,19 +1,17 @@
-<%= @new ? "New group" : "Edit group"%>
+<div class="page-header" id="group-details-heading">
+  <h3><%= @new ? "Create new group" : "Edit group " + @group.name %></h3>
+</div>
 
-<%= form_for @group do |f| %>
+<%= form_for @group, :html => { :class => "form-default col-md-6" } do |f| %>
 
-<p>
-  <%= f.label :name %><br>
-  <%= f.text_field :name %>
-</p>
+  <div class="form-group">
+    <label for="group_name" class="control-label">Name:</label>
+    <input value="<%= @group.name %>" name="group[name]" type="text" class="form-control" id="group_name" placeholder="Name">
+  </div>
+  <div class="form-group">
+    <label for="group_description" class="control-label">Description:</label>
+    <input value="<%= @group.description %>" name="group[description]" type="textarea" class="form-control" id="group_description" placeholder="Description">
+  </div>
 
-<p>
-  <%= f.label :description %><br>
-  <%= f.text_area :description %>
-</p>
-
-<p>
-  <%= f.submit %>
-</p>
-
+  <button type="submit" class="btn btn-default">Save</button>
 <% end %>
