Hide groups actions dropdown when item is clicked
* Hide the groups dwropdown menu as soon as item is clicked. It seems that
  it doesn't get hidden y default when the item link has remote-data=true
* Delete redundant _show_routes file from /grouped_routes since the one
  from /finder is used

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,13 +8,13 @@
       <li class="list-group-item">
         <%= link_to group.name, 'groups/' + group.id.to_s + '/routes', :remote=>true %>
         <div class="dropdown pull-right">
-          <a class="btn btn-link dropdown-toggle" type="button" id="group-actions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          <a href="#" class="dropdown-toggle" role="button"  id="group-actions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu" aria-labelledby="group-actions">
-            <li><%= link_to "Simillar", 'groups/' + group.id.to_s + '/similar', :remote=>true %></li>
-            <li><%= link_to "Edit", edit_group_path(group), :remote=>true%></li>
-            <li><%= link_to "Delete", 'groups/' + group.id.to_s, :method=>:delete, :remote=>true %></li>
+            <li><%= link_to "Simillar", 'groups/' + group.id.to_s + '/similar', :remote=>true, class: "group-action" %></li>
+            <li><%= link_to "Edit", edit_group_path(group), :remote=>true, class: "group-action" %></li>
+            <li><%= link_to "Delete", 'groups/' + group.id.to_s, :method=>:delete, :remote=>true, class: "group-action" %></li>
           </ul>
         </div>
       </li>
