--- a/app/views/grouped_route/show_routes.js.erb
+++ b/app/views/grouped_route/show_routes.js.erb
@@ -1,1 +1,3 @@
 $("#routes-per-group").html("<%=escape_javascript(render :partial => "finder/routes")%>");
+
+$('.groups-button').click(app.ready());
