Add a chatterbot controller
Add controller for the Chat with Ginnie menu option. Controller will
use the tripfinder gem. Views are yet to come.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/">Search</a></li>
-        <li><a href="#">Chat with Ginnie</a></li>
+        <li><a href="<%= chatter_bot_chat_path %>">Chat with Ginnie</a></li>
         <% if current_user %>
           <li><a href="<%= groups_path %>">Explore</a></li>
         <% end %>
