--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,6 +24,19 @@
       </div>
     </div>
     <div class="form-group">
+      <label for="difficulty" class="col-sm-4 control-label">Difficulty:</label>
+      <div class="col-sm-8">
+        <select name="difficulty" id="difficulty" class="form-control">
+          <option value="">Any</option>
+          <option value="1">1</option>
+          <option value="3">2</option>
+          <option value="6">3</option>
+          <option value="8">4</option>
+          <option value="10">5</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-group">
       <label for="destination" class="col-sm-4 control-label">Destination:</label>
       <div class="col-sm-8">
         <input name="location" type="text" class="form-control" id="destination" placeholder="Do you have one?">
