--- a/app/views/groups/_group_details.html.erb
+++ b/app/views/groups/_group_details.html.erb
@@ -1,17 +1,17 @@
 <div class="page-header" id="group-details-heading">
-  <h3><%= @new ? "Create new group" : "Edit group " + @group.name %></h3>
+  <h3><%= @new ?  t('.create') : t('.edit', name: @group.name)  %></h3>
 </div>
 
 <%= form_for @group, :html => { :class => "form-default col-md-6" } do |f| %>
 
   <div class="form-group">
-    <label for="group_name" class="control-label">Name:</label>
-    <input value="<%= @group.name %>" name="group[name]" type="text" class="form-control" id="group_name" placeholder="Name">
+    <label for="group_name" class="control-label"><%= t '.name' %></label>
+    <input value="<%= @group.name %>" name="group[name]" type="text" class="form-control" id="group_name" placeholder="<%= t '.name' %>">
   </div>
   <div class="form-group">
-    <label for="group_description" class="control-label">Description:</label>
-    <input value="<%= @group.description %>" name="group[description]" type="textarea" class="form-control" id="group_description" placeholder="Description">
+    <label for="group_description" class="control-label"><%= t '.description' %></label>
+    <input value="<%= @group.description %>" name="group[description]" type="textarea" class="form-control" id="group_description" placeholder="<%= t '.description' %>">
   </div>
 
-  <button type="submit" class="btn btn-default">Save</button>
+  <button type="submit" class="btn btn-default"><%= t '.save' %></button>
 <% end %>
