--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,33 +1,33 @@
 <div class="container row col-md-4 col-md-offset-4">
 
   <div class="page-header">
-    <h1>Find my trip!</h1>
+    <h1><%= t ".title" %></h1>
   </div>
 
   <form class="form-horizontal" accept-charset="UTF-8" action="finder/find" method="post">
     <div class="form-group">
-      <label for="days_num" class="col-sm-4 control-label">Number of days:</label>
+    <label for="days_num" class="col-sm-4 control-label"><%= t ".days" %></label>
       <div class="col-sm-8">
-        <input name="days" type="number" class="form-control" id="days_num" min="1" max="20" placeholder="How long is your vacation?">
+        <input name="days" type="number" class="form-control" id="days_num" min="1" max="20" placeholder="<%= t '.days_placeholder' %>" >
       </div>
     </div>
     <div class="form-group">
-      <label for="avg_hours" class="col-sm-4 control-label">Hours per day:</label>
+      <label for="avg_hours" class="col-sm-4 control-label"><%= t '.hours' %> </label>
       <div class="col-sm-8">
-        <input name="hours" type="number" class="form-control" id="avg_hours" min="1" max="20" placeholder="Be brave!">
+        <input name="hours" type="number" class="form-control" id="avg_hours" min="1" max="20" placeholder="<%= t '.hours_placeholder' %>">
       </div>
     </div>
     <div class="form-group">
-      <label for="cyclic" class="col-sm-4 control-label">Cyclic route:</label>
+      <label for="cyclic" class="col-sm-4 control-label" ><%= t ".cyclic" %></label>
       <div class="col-sm-8">
         <input name="cyclic" id="cyclic" class="form-control" checked type="checkbox">
       </div>
     </div>
     <div class="form-group">
-      <label for="difficulty" class="col-sm-4 control-label">Difficulty:</label>
+    <label for="difficulty" class="col-sm-4 control-label"> <%= t ".difficulty" %></label>
       <div class="col-sm-8">
         <select name="difficulty" id="difficulty" class="form-control">
-          <option value="">Any</option>
+          <option value=""><%= t '.any' %></option>
           <option value="1">1</option>
           <option value="3">2</option>
           <option value="6">3</option>
@@ -37,14 +37,14 @@
       </div>
     </div>
     <div class="form-group">
-      <label for="destination" class="col-sm-4 control-label">Destination:</label>
+      <label for="destination" class="col-sm-4 control-label"><%= t ".destination" %></label>
       <div class="col-sm-8">
-        <input name="location" type="text" class="form-control" id="destination" placeholder="Do you have one?">
+        <input name="location" type="text" class="form-control" id="destination" placeholder="<%= t '.destination_placeholder' %>">
       </div>
     </div>
     <div class="form-group">
       <div class="col-sm-offset-4 col-sm-8">
-        <button type="submit" class="btn btn-default">Find</button>
+        <button type="submit" class="btn btn-default"><%= t '.find' %></button>
       </div>
     </div>
   </form>
