--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,24 +29,24 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/">Search</a></li>
-        <li><a href="<%= chatter_bot_chat_path %>">Chat with Ginnie</a></li>
+        <li><a href="/"><%= t '.search' %></a></li>
+        <li><a href="<%= chatter_bot_chat_path %>"><%= t '.chat' %></a></li>
         <% if current_user %>
-          <li><a href="<%= groups_path %>">Explore</a></li>
+          <li><a href="<%= groups_path %>"><%= t '.explore' %></a></li>
         <% end %>
-        <li><a href="#">About</a></li>
+        <li><a href="#"><%= t '.about' %></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Details", user_path(current_user.id) %></li>
-              <li><%= link_to "Logout", :logout, method: :post %></li>
+              <li><%= link_to t('.details'), user_path(current_user.id) %></li>
+              <li><%= link_to t('.logout'), :logout, method: :post %></li>
             </ul>
           </li>
         <% else %>
-          <li class="login"><a href="<%= login_path %>">Log in</a>
+          <li class="login"><a href="<%= login_path %>"><%= t '.login' %></a>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
