--- a/app/views/users/details.html.erb
+++ b/app/views/users/details.html.erb
@@ -2,9 +2,9 @@
   <div class="col-md-6 col-md-offset-5 centered">
     <div class="page-header">
       <% if current_user %>
-        <h1>User details</h1>
+        <h1><%= t '.details' %></h1>
       <% else %>
-        <h1>Register</h1>
+        <h1><%= t '.register' %></h1>
       <% end %>
     </div>
 
@@ -12,7 +12,7 @@
       <% if @user.errors.any? %>
         <div class="panel panel-danger">
           <div class="panel-heading">
-            Couldn't register user
+            <%= t '.error' %>
           </div>
           <div class="panel-body">
             <ul>
@@ -25,23 +25,23 @@
       <% end %>
 
       <div class="form-group">
-        <label for="user_email">Email address</label>
-        <input value="<%= @user.email %>" name="user[email]" type="email" class="form-control" id="user_email" placeholder="Email">
+        <label for="user_email"><%= t '.email' %></label>
+        <input value="<%= @user.email %>" name="user[email]" type="email" class="form-control" id="user_email" placeholder="<%= t '.email' %>">
       </div>
       <div class="form-group">
-        <label for="user_password">Password</label>
-        <input value="<%= @user.password %>" name="user[password]" type="password" class="form-control" id="user_password" placeholder="Password">
+        <label for="user_password"><%= t '.password' %></label>
+        <input value="<%= @user.password %>" name="user[password]" type="password" class="form-control" id="user_password" placeholder="<%= t '.password' %>">
       </div>
       <div class="form-group">
-        <label for="user_password_confirmation">Password</label>
-        <input name="user[password_confirmation]" type="password" class="form-control" id="user_password_confirmation" placeholder="Confirm password">
+        <label for="user_password_confirmation"><%= t '.confirm' %></label>
+        <input name="user[password_confirmation]" type="password" class="form-control" id="user_password_confirmation" placeholder="<%= t '.confitm' %>">
       </div>
       <button type="submit" class="btn btn-default">
-        <%= current_user ? "Update" : "Register" %>
+        <%= current_user ? t('.update') : t('.register') %>
       </button>
 
       <% if not current_user %>
-        <%= link_to 'Login', login_path, class: "btn btn-default" %>
+        <%= link_to t('.login'), login_path, class: "btn btn-default" %>
       <% end %>
     <% end %>
 
