Localize in Bulgarian
* Bulgarian is default language
* Have to improve the way the language is determined
* Does not work in en in group recommendation

--- a/app/views/grouped_route/show_routes.js.erb
+++ b/app/views/grouped_route/show_routes.js.erb
@@ -1,3 +1,5 @@
-$("#routes-per-group").html("<%=escape_javascript(render :partial => "finder/routes")%>");
+var html = "<h3><%=@title %></h3>" + "<%=escape_javascript(render :partial => "finder/routes")%>";
+
+$("#routes-per-group").html(html);
 
 $('.groups-button').click(app.ready());
