Fix hardcoded strings

--- a/app/views/users/details.html.erb
+++ b/app/views/users/details.html.erb
@@ -34,7 +34,7 @@
       </div>
       <div class="form-group">
         <label for="user_password_confirmation"><%= t '.confirm' %></label>
-        <input name="user[password_confirmation]" type="password" class="form-control" id="user_password_confirmation" placeholder="<%= t '.confitm' %>">
+        <input name="user[password_confirmation]" type="password" class="form-control" id="user_password_confirmation" placeholder="<%= t '.confirm' %>">
       </div>
       <button type="submit" class="btn btn-default">
         <%= current_user ? t('.update') : t('.register') %>
